--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
-<html
-  xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{layout :: html(head = null,content = ~{::content})}"
->
-  <th:block th:fragment="content">
-    <ul>
-      <li th:each="post : ${posts.items}">
-        <a
-          th:href="@{${post.status.permalink}}"
-          th:text="${post.spec.title}"
-        ></a>
-      </li>
-    </ul>
-    <a th:if="${posts.hasPrevious()}" th:href="@{${posts.prevUrl}}">上一页</a>
-    <a th:if="${posts.hasNext()}" th:href="@{${posts.nextUrl}}">下一页</a>
-  </th:block>
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{layout :: html(head = null,content = ~{::content})}">
+	<th:block th:fragment="content">
+		<div class="container">
+			<div class="col-12" id="main" role="main">
+			<h2 class="section-title">最新文章</h2>
+			<article th:each="post : ${posts.items}" class="post post-atmain" itemscope itemtype="http://schema.org/BlogPosting">
+				<div class="post-text">
+					<h2 class="post-title">
+						<a th:href="${post.status.permalink}" th:text="${post.spec.title}"></a>
+					</h2>
+					<ul class="post-meta">
+						<li>
+							<time th:datetime="${post.spec.publishTime}" itemprop="datePublished">
+								<span th:text="|发布于 ${#dates.format(post.spec.publishTime,'yyyy-MM-dd')}|" th:remove="tag"></span>
+							</time>
+						</li>
+						<li th:text="|${post.stats.visit} 次阅读|"></li>
+						<li itemprop="interactionCount">
+							<a th:href="|${post.status.permalink}#comments|" th:text="|${post.stats.comment} 评论|"></a>
+						</li>
+					</ul>
+					<!-- 摘要 -->
+					<div class="post-content" itemprop="articleBody">
+						<span th:text="${post.status.excerpt}"></span>
+					</div>
+				</div>
+			</article>
+			<div class="page-navigator">
+				<span id="previous">
+					<a class="prev" th:if="${posts.hasPrevious()}" th:href="@{${posts.prevUrl}}">
+						<span class="iconfont"></span></a>
+				</span>
+				<span id="next">
+					<a class="next" th:if="${posts.hasNext()}" th:href="@{${posts.nextUrl}}">
+						<span class="iconfont"></span></a>
+			</div>
+			
+			
+		</span>
+		</div>
+	</th:block>
 </html>
